modifiche per sistemare i problemi trovati da SonarQube